# deepseek

./: .coverage  README.md  config.json  config.py  datacollator.py  dataloader.py  deepseek.py  deepseek_v2_model.py  inference.py  mla.py  moe.py  pyproject.toml  pytest.ini  sampling.py  sft.json  sft.py  tokenizer.py  train.py  trainer.py  training_config.py
.github/workflows/: test.yml
data/fineweb_edu/: fineweb_edu.py
tests/: test_datacollator.py  test_dataloader.py  test_deepseek.py  test_sampling.py  test_tokenizer.py
