[project]
name = "deepseek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.45.5",
    "datasets>=3.5.0",
    "numpy>=2.2.4",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvideo>=0.0.0",
    "wandb>=0.19.9",
]
